--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,3 +1,7 @@
+html {
+  background: $body-background-color;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -8,20 +12,26 @@ body {
   height: 100vh;
   font-family: courier new;
   font-size: 14px;
-  color: yellow;
+  color: $body-color;
+  background: $body-background-color;
 }
 
 main {
   background: #000;
 }
 
-
-
 hr {
   margin: 0 auto;
   background: yellow;
   width: 80%;
+}
 
+.title {
+  color: $body-color;
+}
+
+.subtitle {
+  color: $body-color;
 }
 
 .content h6 {
@@ -30,5 +40,5 @@ hr {
 }
 
 .container {
-  padding: 60px 20px;
+  padding: $spacing;
 }
